# pscan

./: .gitignore  LICENSE  README.md  docs.txt  pyproject.toml  requirements.txt
src/app/: pscan.py
