# configs and packaging

[project]
name = "pscan_losthread"
version = "1.0.0"
authors = [{ name="losthread"}]
description = "A CLI tool for scanning ports like nmap"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
license = { text = "MIT" }
dependencies = [
  "attrs==26.1.0",
  "Automat==25.4.16",
  "certifi==2026.6.17",
  "cffi==2.0.0",
  "charset-normalizer==3.4.7",
  "constantly==23.10.4",
  "cryptography==49.0.0",
  "cssselect==1.4.0",
  "defusedxml==0.7.1",
  "filelock==3.29.4",
  "hyperlink==21.0.0",
  "idna==3.18",
  "Incremental==24.11.0",
  "itemadapter==0.13.1",
  "itemloaders==1.4.0",
  "jmespath==1.1.0",
  "lxml==6.1.1",
  "packaging==26.2",
  "parsel==1.11.0",
  "Protego==0.6.2",
  "pycparser==3.0",
  "PyDispatcher==2.0.7",
  "pyOpenSSL==26.3.0",
  "queuelib==1.9.0",
  "requests==2.34.2",
  "requests-file==3.0.1",
  "scapy==2.7.0",
  "service-identity==26.1.0",
  "tldextract==5.3.1",
  "Twisted==26.4.0",
  "typing_extensions==4.16.0",
  "urllib3==2.7.0",
  "w3lib==2.4.1",
  "zope.interface==8.5",
]

[project.scripts]
pscan = "app.pscan:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]